Added alloGroup scrapper(Adorocinema, Beyazperde,...) Many fixe Media panel mockup ...